--- a/test/fixtures/valid_users.yml
+++ b/test/fixtures/valid_users.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  email: MyString
+  email: test.email1@domain.com
 
 two:
-  email: MyString
+  email: test.email2@domain.com
